--- a/src/categories/business.njk
+++ b/src/categories/business.njk
@@ -3,6 +3,7 @@ layout: base
 title: వ్యాపారం
 description: శేర్ మార్కెట్, ఆర్థిక వార్తలు, వ్యాపార అవకాశాలు, ఇకానమీ న్యూస్
 permalink: /categories/business/
+templateEngineOverride: njk
 ---
 
 <section class="category-header bg-success bg-gradient text-white py-5">
